--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/*my custom styles*/
+.bg-custom-gradient {
+  background-image: linear-gradient(-90deg, #B983FF, #99FEFF)
+}
