--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+
+/*my custom css for App*/
+
+.bg-custom-gradient {
+  background-image: linear-gradient(-90deg, #99FEFF, #B983FF)
+}
+
+body {
+  /*font-size: 14px;
+  line-height: 1.8;
+  color: #222;
+  font-weight: 400;
+  font-family: 'Montserrat';*/
+  background-image: url(images/bgimg.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: relative;
+  width: 100vw;
+  height: 100vh;
+}
